[package]
name = "gluten-keyboard"
version = "0.2.0"
authors = ["John Nunley <jtnunley01@gmail.com>", "Pyfisch <pyfisch@posteo.org>"]
description = "Contains types to define keyboard related events."
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/bread-graphics/gluten-keyboard"
keywords = ["keyboard", "input", "event", "webdriver"]
edition = "2018"
rust-version = "1.46"

[dependencies]
bitflags = { version = "1.0.0", default-features = false }
serde = { version = "1.0.0", optional = true, features = ["derive"], default-features = false }
